# agentic-supply-chain-resilience

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_GRAPH.md  DEPLOYMENT.md  Dockerfile  Dockerfile.streamlit  KAGGLE_SUBMISSION.md  README.md  agents-cli-manifest.yaml  app.py  architecture_diagram.md  cloudbuild.streamlit.yaml  config.py  demo_script.md  main.py  pyproject.toml  requirements.txt  submission_summary.md
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
.streamlit/: config.toml
adk_app/: agent.py  fast_api_app.py  tools.py
agents/: agentic_ai_orchestrator.py  demand_agent.py  disruption_agent.py  evaluation_agent.py  explanation_agent.py  human_approval_agent.py  inventory_agent.py  reinforcement_learning_agent.py  security_agent.py  supervisor_agent.py  transport_agent.py
data/: distance_matrix.csv  generate_demo_data.py  orders.csv  suppliers.csv  trucks.csv  warehouses.csv
evaluation/: metrics.py  scenarios.py
mcp_server/: server.py  tool_registry.py
memory/: planner_preferences.json  rl_policy.json
security/: audit_log.py  guardrails.py
skills/: demand_analysis_skill.md  evaluation_skill.md  inventory_feasibility_skill.md  transport_recovery_skill.md
tests/: test_adk_app.py  test_data_validation.py  test_disruptions.py  test_eval_assets.py  test_evaluation.py  test_formal_evaluation.py  test_inventory.py  test_mcp_security.py  test_memory.py  test_reinforcement_learning.py  test_report.py  test_security.py  test_transport.py
tools/: data_tools.py  disruption_tools.py  evaluation_tools.py  inventory_tools.py  (+2 more)
(+12 files in other folders)
