[project]
name = "agentic-supply-chain-resilience"
version = "0.1.0"
description = "Google ADK multi-agent supply-chain resilience capstone prototype."
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "mcp>=0.1.0",
    "google-genai>=0.1.0",
    "google-adk>=2.3.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
eval = [
    "pytest>=7.0.0",
    "google-cloud-aiplatform[evaluation]>=1.75.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["app", "config", "main"]

[tool.setuptools.packages.find]
include = ["adk_app*", "agents*", "evaluation*", "mcp_server*", "security*", "tools*"]
exclude = ["data*", "memory*", "outputs*", "skills*", "tests*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
